--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -26,28 +26,74 @@
 
     <!-- Post Creation Form -->
     <div class="create-post-section">
-        <h2>Create New Post</h2>
+        <div class="create-post-header">
+            <div class="header-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                </svg>
+            </div>
+            <div class="header-text">
+                <h2>Create New Post</h2>
+                <p>Share your thoughts with the community</p>
+            </div>
+        </div>
         <form (ngSubmit)="onCreatePost()" class="create-post-form">
             <div class="form-group">
-                <input [(ngModel)]="post.title" name="title" placeholder="Post Title" required>
+                <label for="post-title">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q9.291 9.087 9 9c5 0 6 3 6 4s-1 1-1 1zM12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
+                    </svg>
+                    Title
+                </label>
+                <input id="post-title" [(ngModel)]="post.title" name="title" placeholder="Give your post a catchy title..." required>
             </div>
             <div class="form-group">
-                <textarea [(ngModel)]="post.content" name="content" rows="5" placeholder="What's on your mind?" required></textarea>
-            </div>
-            <div class="form-group file-input-wrapper">
-                <label for="file-input" class="file-input-label">
-                    <span>📷 Add Photos</span>
+                <label for="post-content">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                        <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9 9 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.4 10.4 0 0 1-.524 2.318l-.003.011a11 11 0 0 1-.244.637c-.079.186.074.394.273.362a22 22 0 0 0 .693-.125m.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6-3.004 6-7 6a8 8 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a11 11 0 0 0 .398-2"/>
+                    </svg>
+                    Content
                 </label>
-                <input id="file-input" type="file" (change)="onFileSelected($event)" multiple accept="image/*">
-                <span *ngIf="selectedFiles.length > 0" class="file-count">{{selectedFiles.length}} file(s) selected</span>
+                <textarea id="post-content" [(ngModel)]="post.content" name="content" rows="6" placeholder="What's on your mind? Share your story..." required></textarea>
             </div>
             <div *ngIf="selectedFiles.length > 0" class="image-preview-container">
                 <div *ngFor="let file of selectedFiles; let i = index" class="image-preview-item">
                     <img [src]="getImagePreview(file)" alt="Preview">
-                    <button type="button" class="remove-image-btn" (click)="removeImage(i)">✕</button>
+                    <button type="button" class="remove-image-btn" (click)="removeImage(i)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
+                        </svg>
+                    </button>
                 </div>
             </div>
-            <button type="submit" class="submit-btn">Post</button>
+            <div class="form-actions">
+                <div class="file-input-wrapper">
+                    <label for="file-input" class="file-input-label">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+                            <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1z"/>
+                        </svg>
+                        <span>Add Photos</span>
+                    </label>
+                    <input id="file-input" type="file" (change)="onFileSelected($event)" multiple accept="image/*">
+                    <span *ngIf="selectedFiles.length > 0" class="file-count">{{selectedFiles.length}} photo(s)</span>
+                </div>
+                <button type="submit" class="submit-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z"/>
+                    </svg>
+                    Publish Post
+                </button>
+            </div>
+            <div class="message-err" *ngIf="message">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4m.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
+                </svg>
+                {{message}}
+            </div>
         </form>
     </div>
 
