--- a/frontend/src/app/profile/component/profile.html
+++ b/frontend/src/app/profile/component/profile.html
@@ -3,9 +3,8 @@
     <div class="profile-header">
         <div class="profile-info">
             <div class="profile-avatar">
-                <img *ngIf="profileRes.profileImagePath"
-                     [src]="'http://localhost:8080/' + profileRes.profileImagePath"
-                     alt="Profile Picture">
+                <img *ngIf="profileRes.profileImagePath" [src]="'http://localhost:8080/' + profileRes.profileImagePath"
+                    alt="Profile Picture">
                 <div *ngIf="!profileRes.profileImagePath" class="avatar-placeholder">
                     {{profileRes.firstName.charAt(0)}}{{profileRes.lastName.charAt(0)}}
                 </div>
@@ -14,13 +13,23 @@
                 <h1>{{profileRes.firstName}} {{profileRes.lastName}}</h1>
                 <p class="username">&#64;{{profileRes.username}}</p>
                 <p class="email">{{profileRes.email}}</p>
-                <div class="profile-stats">
+                <div class="profile-stats" *ngIf="!this.followRes?.following">
                     <div class="stat">
-                        <span class="stat-value">{{followers}}</span>
+                        <span class="stat-value">{{this.profileRes.follower}}</span>
                         <span class="stat-label">Followers</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-value">{{profileRes.following}}</span>
+                        <span class="stat-value">{{this.profileRes.following}}</span>
+                        <span class="stat-label">Following</span>
+                    </div>
+                </div>
+                <div class="profile-stats" *ngIf="this.followRes?.following">
+                    <div class="stat">
+                        <span class="stat-value">{{this.followRes?.following}}</span>
+                        <span class="stat-label">Followers</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-value">{{this.followRes?.follower}}</span>
                         <span class="stat-label">Following</span>
                     </div>
                 </div>
@@ -39,8 +48,10 @@
             </button>
             <button class="btn btn-report" (click)="onReport()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                    <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/>
-                    <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+                    <path
+                        d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z" />
+                    <path
+                        d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z" />
                 </svg>
                 Report User
             </button>
@@ -52,7 +63,8 @@
                 <h3>Report User</h3>
                 <button class="close-btn" (click)="onReport()">✕</button>
             </div>
-            <p class="report-description">Please describe why you're reporting this user. Our team will review your report.</p>
+            <p class="report-description">Please describe why you're reporting this user. Our team will review your
+                report.</p>
             <div class="report-reasons">
                 <label class="reason-option">
                     <input type="radio" name="reportReason" value="spam" #reason1>
@@ -101,9 +113,8 @@
                 <!-- Post with image(s) - Image as background with overlay -->
                 <div *ngIf="post.mediaPaths && post.mediaPaths.length > 0" class="post-with-image">
                     <div class="post-image-wrapper">
-                        <img [src]="'http://localhost:8080/' + post.mediaPaths[0]"
-                             alt="{{ post.title }}"
-                             class="post-bg-image">
+                        <img [src]="'http://localhost:8080/' + post.mediaPaths[0]" alt="{{ post.title }}"
+                            class="post-bg-image">
                         <div class="post-image-overlay">
                             <h3 class="post-title-overlay">{{post.title}}</h3>
                         </div>
@@ -112,8 +123,7 @@
                         <div class="post-author-compact">
                             <div class="author-avatar-small">
                                 <img *ngIf="profileRes?.profileImagePath"
-                                     [src]="'http://localhost:8080/' + profileRes.profileImagePath"
-                                     alt="Profile">
+                                    [src]="'http://localhost:8080/' + profileRes.profileImagePath" alt="Profile">
                                 <div *ngIf="!profileRes?.profileImagePath" class="avatar-placeholder-small">
                                     {{profileRes.firstName.charAt(0) || ''}}
                                 </div>
@@ -141,8 +151,7 @@
                         <div class="post-author">
                             <div class="author-avatar-small">
                                 <img *ngIf="profileRes?.profileImagePath"
-                                     [src]="'http://localhost:8080/' + profileRes.profileImagePath"
-                                     alt="Profile">
+                                    [src]="'http://localhost:8080/' + profileRes.profileImagePath" alt="Profile">
                                 <div *ngIf="!profileRes?.profileImagePath" class="avatar-placeholder-small">
                                     {{profileRes.firstName.charAt(0) || ''}}
                                 </div>
